--- a/content/stylesheet.css
+++ b/content/stylesheet.css
@@ -3,7 +3,7 @@
 }
 
 body {
-  background: url(/imgs/IMG_2240_gray.jpg) no-repeat center center fixed;
+  background: url(/static/imgs/IMG_2240_gray.jpg) no-repeat center center fixed;
   background-size: cover;
 }
 
