--- a/layouts/default.html
+++ b/layouts/default.html
@@ -3,30 +3,32 @@
   <head>
     <meta charset="utf-8">
     <title>SA CDC - <%= @item[:title] %></title>
-    <!-- link rel="stylesheet" href="/style.css" -->
-    <link rel="stylesheet/less" href="/styles.less">
+    <link rel="stylesheet" href="/style.css">
+    <!-- link rel="stylesheet/less" href="/styles.less" -->
 
     <!-- Latest compiled and minified CSS -->
-    <!-- <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css"> -->
+    <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css">
     <!-- link rel="stylesheet" href="/bootstrap.min.css" -->
 
     <!-- Optional theme -->
     <!-- <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap-theme.min.css"> -->
-    <link rel="stylesheet" href="/bootstrap-theme.min.css">
+    <link rel="stylesheet" href="/static/mybootstrap/dist/css/bootstrap-theme.min.css">
 
     <!-- Latest compiled and minified JavaScript -->
-    <!-- <script src="http://code.jquery.com/jquery.js"></script> -->
+    <script src="http://code.jquery.com/jquery.js"></script>
     <!-- <script src="//netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js"></script> -->
-    <script src="/jquery.js"></script>
-    <script src="/bootstrap.min.js"></script>
-    <script src="http://lesscss.googlecode.com/files/less-1.2.2.min.js"></script>
+    <script src="/static/mybootstrap/dist/js/bootstrap.min.js"></script>
+    <!-- script src="http://lesscss.googlecode.com/files/less-1.2.2.min.js"></script>
     <script type="text/javascript">
       less.watch();
-    </script>
+    </script -->
 
     <!-- you don't need to keep this, but it's cool for stats! -->
     <meta name="generator" content="nanoc <%= Nanoc::VERSION %>">
-    <meta http-equiv="refresh" content="2" /> 
+    <meta http-equiv="refresh" content="20000" /> 
+
+    <!-- Thanks Eric!  this seems to fix the scaling issue! -->
+    <meta name="viewport" content="width=device-width, user-scalable=no">
   </head>
   <body>
     <nav class="navbar navbar-default" role="navigation">
@@ -38,14 +40,18 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a href="/"><img class="navbar-brand" src="/imgs/sa-cdc_logo_sm.gif"></a>
-<!-- width="70px" height="56px" -->
+          <a href="/"><img class="navbar-brand" src="/static/imgs/sa-cdc_logo_sm.gif"></a>
+
+          <!-- width="70px" height="56px" -->
+
+<!-- If/When we want to add a search feature 
           <form class="navbar-form col-xs-2" role="search" style="float:right;">
             <div class="form-group">
               <input type="text" class="form-control" placeholder="Search">
               <button type="submit" class="btn btn-default">Submit</button>
             </div>
           </form>
+-->
         </div>
         <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="navbar-collapse collapse" id="sa-cdc-navbar-collapse">
@@ -80,9 +86,9 @@
             <p>SACDC will be closed until January 8th for the holiday season. We look forward to seeing you once we return!</p>
           </div>
           <div class="col-md-2 well well-lg">
-              <a href="http://wordpress.org"><img src="/imgs/linkedin.jpg" width="44" height="44"></a>
-              <a href="http://facebook.com/sa-cdc"><img src="/imgs/facebook.png" width="44" height="44"></a>
-              <a href="http://twitter.com/sa-cdc"><img src="/imgs/twitter.jpg" width="44" height="44"></a>
+              <a href="http://wordpress.org"><img src="/static/imgs/linkedin.jpg" width="44" height="44"></a>
+              <a href="http://facebook.com/sa-cdc"><img src="/static/imgs/facebook.png" width="44" height="44"></a>
+              <a href="http://twitter.com/sa-cdc"><img src="/static/imgs/twitter.jpg" width="44" height="44"></a>
           </div>
         </div>
       </div>
