Cleaned up layout head region, removed local boostrap refs.

--- a/layouts/default.html
+++ b/layouts/default.html
@@ -4,24 +4,16 @@
     <meta charset="utf-8">
     <title>SA CDC - <%= @item[:title] %></title>
     <link rel="stylesheet" href="/style.css">
-    <!-- link rel="stylesheet/less" href="/styles.less" -->
 
     <!-- Latest compiled and minified CSS -->
     <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css">
-    <!-- link rel="stylesheet" href="/bootstrap.min.css" -->
 
     <!-- Optional theme -->
-    <!-- <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap-theme.min.css"> -->
-    <link rel="stylesheet" href="/static/mybootstrap/dist/css/bootstrap-theme.min.css">
+    <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap-theme.min.css">
 
     <!-- Latest compiled and minified JavaScript -->
     <script src="http://code.jquery.com/jquery.js"></script>
-    <!-- <script src="//netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js"></script> -->
-    <script src="/static/mybootstrap/dist/js/bootstrap.min.js"></script>
-    <!-- script src="http://lesscss.googlecode.com/files/less-1.2.2.min.js"></script>
-    <script type="text/javascript">
-      less.watch();
-    </script -->
+    <script src="//netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js"></script>
 
     <!-- you don't need to keep this, but it's cool for stats! -->
     <meta name="generator" content="nanoc <%= Nanoc::VERSION %>">
