--- a/layouts/default.html
+++ b/layouts/default.html
@@ -41,6 +41,7 @@
         <div class="navbar-collapse collapse" id="sa-cdc-navbar-collapse">
           <ul class="nav navbar-nav">
             <% home_page = items_with_tag('sa-cdc')  %>
+            <%= home_page.map %>
             <% home_page.each do |page| %>
                 <% if @item[:title] == page[:title] %>
                   <li class="active"> <%= link_to(page[:title], page.reps[0]) %> </li>
