--- a/content/stylesheet.css
+++ b/content/stylesheet.css
@@ -3,12 +3,12 @@
 }
 
 body {
-  background: url(/static/imgs/IMG_2240_gray.jpg) no-repeat center center fixed;
+  background: url(/imgs/IMG_2240_gray.jpg) no-repeat center center fixed;
   background-size: cover;
 }
 
 #main {
-  background: rgba(155, 155, 155, 0.6);
+  background: rgba(155, 155, 155, 0.9);
 }
 
 #sa-cdc-navbar-collapse {
