--- a/layouts/default.html
+++ b/layouts/default.html
@@ -17,6 +17,8 @@
 
     <!-- you don't need to keep this, but it's cool for stats! -->
     <meta name="generator" content="nanoc <%= Nanoc::VERSION %>">
+
+    <!-- remove this refresh tag when we go live, useful for locally tuning appearance when set to low values -->
     <meta http-equiv="refresh" content="20000" /> 
 
     <!-- Thanks Eric!  this seems to fix the scaling issue! -->
@@ -40,14 +42,26 @@
         <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="navbar-collapse collapse" id="sa-cdc-navbar-collapse">
           <ul class="nav navbar-nav">
-            <% home_page = items_with_tag('sa-cdc')  %>
-            <% home_page.each do |page| %>
-                <% if @item[:title] == page[:title] %>
-                  <li class="active"> <%= link_to(page[:title], page.reps[0]) %> </li>
-                <% else %>
-                  <li> <%= link_to(page[:title], page.reps[0]) %> </li>
-                <% end %>
+         
+            <%# TODO: Move this ERB code to a ruby method... %>
+            <% bigA = Array.new %>
+            <% home_pages = items_with_tag('sa-cdc')  %>
+            <% home_pages.each do |page| %>
+              <% h = { lnk: link_to(page[:title], page.reps[0]) } %>
+              <% h.merge!( { precedence: page[:precedence].to_i } ) %>
+              <% if @item[:title] == page[:title] %>
+                <% h.merge!({ cls: "active" }) %>
+              <% end %>
+              <% bigA.push(h) %>
             <% end %>
+            <% bigA.sort_by!{|v| v[:precedence]} %>
+            <% bigA.reverse! %>
+
+            <%# TODO: Base on method call from above code... %>
+            <% bigA.each do |page| %>
+              <li <%= page[:cls] %> > <%= page[:lnk] %> </li>
+            <% end %>
+
           </ul>
         </div><!-- /.navbar-collapse -->
       </div><!-- /.container-fluid -->
