--- a/layouts/default.html
+++ b/layouts/default.html
@@ -34,10 +34,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a href="/"><img class="navbar-brand" src="/static/imgs/sa-cdc_logo_sm.gif"></a>
-
-          <!-- width="70px" height="56px" -->
-
+          <a href="/"><img class="brand" src="/static/imgs/sa-cdc_logo.gif" height="72px" width="93px"></a>
         </div>
         <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="navbar-collapse collapse" id="sa-cdc-navbar-collapse">
