--- a/layouts/default.html
+++ b/layouts/default.html
@@ -45,9 +45,11 @@
             <% home_pages = items_with_tag('sa-cdc')  %>
             <% home_pages.each do |page| %>
               <% h = { lnk: link_to(page[:title], page.reps[0]) } %>
+              <% h.merge!( { item: page } ) %>
               <% h.merge!( { precedence: page[:precedence].to_i } ) %>
-              <% if @item[:title] == page[:title] %>
+              <% if @item[:group] == page[:group] %>
                 <% h.merge!({ cls: "class=\"active\"" }) %>
+                <% h.merge!({ cls_bald: "active" }) %>
               <% end %>
               <% bigA.push(h) %>
             <% end %>
@@ -56,20 +58,23 @@
 
             <%# TODO: Base on method call from above code... %>
             <% bigA.each do |page| %>
-              <li <%= page[:cls] %> > <%= page[:lnk] %> </li>
+                <% if(!page[:item].children.empty?) %>
+                  <li class="dropdown <%= page[:cls_bald] %>">
+                    <a href="#" class="dropdown-toggle" data-toggle="dropdown"> <%= page[:item][:title] %> <b class="caret"></b></a>
+                    <ul class="dropdown-menu">
+                      <li> <%= link_to(page[:item][:title], page[:item].reps[0]) %></li>
+                      <% page[:item].children.each do |sub| %>
+                        <li><%= link_to(sub[:title], sub.reps[0]) %></li>
+                      <% end %>
+                    </ul>
+                  </li>
+                <% else %>
+                  <li <%= page[:cls] %>>
+                    <%= page[:lnk] %>
+                  </li>
+                <% end %>
             <% end %>
-<li class="dropdown">
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown">Dropdown <b class="caret"></b></a>
-          <ul class="dropdown-menu">
-            <li><a href="#">Action</a></li>
-            <li><a href="#">Another action</a></li>
-            <li><a href="#">Something else here</a></li>
-            <li class="divider"></li>
-            <li><a href="#">Separated link</a></li>
-            <li class="divider"></li>
-            <li><a href="#">One more separated link</a></li>
-          </ul>
-        </li>
+
           </ul>
         </div><!-- /.navbar-collapse -->
       </div><!-- /.container-fluid -->
