Changed visual format on Clinic Info and sched_vst

--- a/content/stylesheet.css
+++ b/content/stylesheet.css
@@ -28,3 +28,11 @@ footer{
 	margin: 40px 0px;
 	padding: 20px 0px;
 }
+
+a:link { color: black; }
+
+a:active { color: blue; }
+
+a:visited { color: red; }
+
+
