Continued working beautification.

--- a/layouts/default.html
+++ b/layouts/default.html
@@ -3,13 +3,15 @@
   <head>
     <meta charset="utf-8">
     <title>SA CDC - <%= @item[:title] %></title>
-    <link rel="stylesheet" href="/style.css">
 
     <!-- Latest compiled and minified CSS -->
     <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css">
 
     <!-- Optional theme -->
-    <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap-theme.min.css">
+    <!-- <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap-theme.min.css"> -->
+
+    <link rel="stylesheet" href="/style.css">
+    <link rel="stylesheet" href="/static/css/docs.css">
 
     <!-- Latest compiled and minified JavaScript -->
     <script src="http://code.jquery.com/jquery.js"></script>
@@ -32,7 +34,7 @@
       <meta name="viewport" content="width=device-width, user-scalable=no">
     <!-- <![endif]-->
   </head>
-  <body>
+  <body class="bs-docs-home">
     <nav class="navbar navbar-default" role="navigation">
       <div class="container-fluid">
         <div class="navbar-header">
