--- a/content/stylesheet.css
+++ b/content/stylesheet.css
@@ -29,41 +29,10 @@ footer{
 	padding: 20px 0px;
 }
 
-/* Marketing section of Overview
--------------------------------------------------- */
+/*
+ * Link colors, make it pop on gray background.
+ */
 
-.marketing {
-  text-align: center;
-  color: #5a5a5a;
-}
-.marketing h1 {
-  margin: 60px 0 10px;
-  font-size: 60px;
-  font-weight: 200;
-  line-height: 1;
-  letter-spacing: -1px;
-}
-.marketing h2 {
-  font-weight: 200;
-  margin-bottom: 5px;
-}
-.marketing p {
-  font-size: 16px;
-  line-height: 1.5;
-}
-.marketing .marketing-byline {
-  margin-bottom: 40px;
-  font-size: 20px;
-  font-weight: 300;
-  line-height: 1.25;
-  color: #000;
-}
-.marketing-img {
-  display: block;
-  margin: 0 auto 30px;
-  max-height: 145px;
-}
-=======
 a:link { color: black; }
 
 a:active { color: blue; }
