--- a/layouts/default.html
+++ b/layouts/default.html
@@ -12,6 +12,7 @@
 
     <link rel="stylesheet" href="/style.css">
     <link rel="stylesheet" href="/static/css/docs.css">
+    <link rel="stylesheet" href="/twitter-styles.css">
 
     <!-- Latest compiled and minified JavaScript -->
     <script src="http://code.jquery.com/jquery.js"></script>
@@ -19,6 +20,8 @@
 
     <!-- Date.js to make the eligibility sheet easier. Should also prove useful when we do scheduling stuff -Browne -->
     <script src="/static/scripts/date.js"></script>
+    <script src="/static/scripts/generic.js"></script>
+    <script src="/static/scripts/twitterfeed-fade.js"></script>
 
     <!-- you don't need to keep this, but it's cool for stats! -->
     <meta name="generator" content="nanoc <%= Nanoc::VERSION %>">
@@ -95,19 +98,18 @@
     </div>
 
     <footer>
-      <div class="container">
-        <div class="row">
-          <div class="col-md-2 well well-lg">
+      <div class="container container-xs-height">
+        <div class="row row-xs-height">
+          <div class="col-md-2 well well-lg col-xs-height">
             1 Haven for Hope Way<br>
             Building 1, Suite 400<br>
             San Antonio, TX 78207<br>
 	    (210) 220-2300
           </div>
-          <div class="col-md-8 well">
-            <h4>News</h4>
-            <p>SACDC will be closed until January 8th for the holiday season. We look forward to seeing you once we return!</p>
+          <div class="col-md-8 well col-xs-height">
+            <div id="twitter-feed"></div>
           </div>
-          <div class="col-md-2 well well-lg">
+          <div class="col-md-2 well well-lg col-xs-height">
               <a href="http://wordpress.org"><img src="/static/imgs/linkedin.jpg" width="44" height="44"></a>
               <a href="http://facebook.com/sa-cdc"><img src="/static/imgs/facebook.png" width="44" height="44"></a>
               <a href="http://twitter.com/sa-cdc"><img src="/static/imgs/twitter.jpg" width="44" height="44"></a>
