--- a/layouts/default.html
+++ b/layouts/default.html
@@ -4,6 +4,8 @@
     <meta charset="utf-8">
     <title>SA CDC - <%= @item[:title] %></title>
 
+    <link href='http://fonts.googleapis.com/css?family=Cabin:400,700,400italic,700italic' rel='stylesheet' type='text/css'>
+
     <!-- Latest compiled and minified CSS -->
     <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css">
 
