Incorporated some of John's comments from 22 April 2014:   JB7: This is caused by the carousel controls, we are looking into it.
  JB9: A basic search bar should be easy, the first iteration might not be very robust but we can improve it over time.  Yes a toggle will be needed for spanish/english.

  JB1: The twitter feed rotates through the latest 10 feeds every 15 seconds (both numbers can easily be adjusted).  We can filter based on keywords or even hashtags if needed/wanted.  Color is an easy fix, right now it is using our default link color scheme.

   JB10:  Added text.

--- a/layouts/default.html
+++ b/layouts/default.html
@@ -106,7 +106,8 @@
             1 Haven for Hope Way<br>
             Building 1, Suite 400<br>
             San Antonio, TX 78207<br>
-	    (210) 220-2300
+	          (210) 220-2300<br>
+	          <a href="mailto:#">Your Email @ SA-CDC </a>
           </div>
           <div class="col-md-8 well col-xs-height">
             <div id="twitter-feed"></div>
@@ -115,7 +116,6 @@
               <a href="http://wordpress.org"><img src="/static/imgs/linkedin.jpg" width="44" height="44"></a>
               <a href="http://facebook.com/sa-cdc"><img src="/static/imgs/facebook.png" width="44" height="44"></a>
               <a href="http://twitter.com/sa-cdc"><img src="/static/imgs/twitter.jpg" width="44" height="44"></a>
-	      <a href="mailto:#" target="_top"><img src="/static/imgs/email.png" width="44" height="44"></a>
           </div>
         </div>
       </div>
