--- a/content/stylesheet.css
+++ b/content/stylesheet.css
@@ -33,9 +33,9 @@ footer{
  * Link colors, make it pop on gray background.
  */
 
-a:link { color: black; }
+a:link { color: #0079C1; }
 
-a:active { color: blue; }
+a:active { color: #5AC1FF; }
 
-a:visited { color: red; }
+a:visited { color: #0079C1; }
 
