Added hover to SA-CDC logo; Added "Home" hover to SA-CDC Icon in navbar

--- a/layouts/default.html
+++ b/layouts/default.html
@@ -49,7 +49,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a href="/"><img class="brand" src="/static/imgs/sa-cdc_logo.gif" height="72px" width="93px"></a>
+          <a href="/" title="Home"><img class="brand" src="/static/imgs/sa-cdc_logo.gif" height="92px" width="113px"></a>
         </div>
         <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="navbar-collapse collapse" id="sa-cdc-navbar-collapse">
