--- a/layouts/default.html
+++ b/layouts/default.html
@@ -50,11 +50,13 @@
             <span class="icon-bar"></span>
           </button>
           <a href="/" title="Home"><img class="brand" src="/static/imgs/sa-cdc_logo.gif" height="92px" width="113px"></a>
+          <p class="navbar-right navbar-text sa-cdc-utility">
+            Search <span class="glyphicon glyphicon-search"></span>
+          </p>
         </div>
         <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="navbar-collapse collapse" id="sa-cdc-navbar-collapse">
           <ul class="nav navbar-nav">
-         
             <%# TODO: Move this ERB code to a ruby method... %>
             <% bigA = Array.new %>
             <% home_pages = items_with_tag('sa-cdc')  %>
@@ -100,19 +102,19 @@
     </div>
 
     <footer>
-      <div class="container container-xs-height">
-        <div class="row row-xs-height">
-          <div class="col-md-2 well well-lg col-xs-height">
+      <div class="container">
+        <div class="row">
+          <div class="col-md-2 well well-lg">
             1 Haven for Hope Way<br>
             Building 1, Suite 400<br>
             San Antonio, TX 78207<br>
 	          (210) 220-2300<br>
 	          <a href="mailto:#">Your Email @ SA-CDC </a>
           </div>
-          <div class="col-md-8 well col-xs-height">
+          <div class="col-md-8 well">
             <div id="twitter-feed"></div>
           </div>
-          <div class="col-md-2 well well-lg col-xs-height">
+          <div class="col-md-2 well well-lg">
               <a href="http://wordpress.org"><img src="/static/imgs/linkedin.jpg" width="44" height="44"></a>
               <a href="http://facebook.com/sa-cdc"><img src="/static/imgs/facebook.png" width="44" height="44"></a>
               <a href="http://twitter.com/sa-cdc"><img src="/static/imgs/twitter.jpg" width="44" height="44"></a>
