--- a/layouts/default.html
+++ b/layouts/default.html
@@ -104,21 +104,23 @@
     <footer>
       <div class="container">
         <div class="row">
-          <div class="col-md-2 well well-lg">
+        <div class="equal">
+          <div class="col-md-2 well well-lg demo">
             1 Haven for Hope Way<br>
             Building 1, Suite 400<br>
             San Antonio, TX 78207<br>
 	          (210) 220-2300<br>
 	          <a href="mailto:#">Your Email @ SA-CDC </a>
           </div>
-          <div class="col-md-8 well">
+          <div class="col-md-8 well demo">
             <div id="twitter-feed"></div>
           </div>
-          <div class="col-md-2 well well-lg">
+          <div class="col-md-2 well well-lg demo">
               <a href="http://wordpress.org"><img src="/static/imgs/linkedin.jpg" width="44" height="44"></a>
               <a href="http://facebook.com/sa-cdc"><img src="/static/imgs/facebook.png" width="44" height="44"></a>
               <a href="http://twitter.com/sa-cdc"><img src="/static/imgs/twitter.jpg" width="44" height="44"></a>
           </div>
+        </div>
         </div>
       </div>
     </footer>
