--- a/layouts/default.html
+++ b/layouts/default.html
@@ -109,15 +109,17 @@
             Building 1, Suite 400<br>
             San Antonio, TX 78207<br>
 	          (210) 220-2300<br>
-	          <a href="mailto:#">Your Email @ SA-CDC </a>
+	          <a href="mailto:info@sachristiandental.org">info@sachristiandental.org</a>
           </div>
           <div class="col-md-8 well">
             <div id="twitter-feed"></div>
           </div>
           <div class="col-md-2 well well-lg">
-              <a href="http://wordpress.org"><img src="/static/imgs/linkedin.jpg" width="44" height="44"></a>
-              <a href="http://facebook.com/sa-cdc"><img src="/static/imgs/facebook.png" width="44" height="44"></a>
-              <a href="http://twitter.com/sa-cdc"><img src="/static/imgs/twitter.jpg" width="44" height="44"></a>
+              <a href="https://www.linkedin.com/company/the-san-antonio-christian-dental-clinic?trk=biz-companies-cym"><img src="/static/imgs/soc_med/LinkedIn.png" width="44" height="44"></a>
+              <a href="https://www.facebook.com/pages/San-Antonio-Christian-Dental-Clinic/308745854960?ref=hl"><img src="/static/imgs/soc_med/Facebook.png" width="44" height="44"></a>
+              <a href="http://twitter.com/sa-cdc"><img src="/static/imgs/soc_med/Twitter.png" width="44" height="44"></a>
+	      <a href="http://instagram.com/sachristiandental"><img src="/static/imgs/soc_med/Instagram.png" width="44" height="44"></a>
+	      <a href="http://www.pinterest.com/sacdc1/"><img src="/static/imgs/soc_med/Pinterest.png" width="44" height="44"></a>
           </div>
         </div>
       </div>
