Fixed links on social media again

--- a/layouts/default.html
+++ b/layouts/default.html
@@ -115,11 +115,11 @@
             <div id="twitter-feed"></div>
           </div>
           <div class="col-md-2 well well-lg">
-              <a href="https://www.linkedin.com/company/the-san-antonio-christian-dental-clinic?trk=biz-companies-cym"><img src="/static/imgs/soc_med/LinkedIn.png" width="44" height="44"></a>
-              <a href="https://www.facebook.com/pages/San-Antonio-Christian-Dental-Clinic/308745854960?ref=hl"><img src="/static/imgs/soc_med/Facebook.png" width="44" height="44"></a>
-              <a href="http://twitter.com/sa-cdc"><img src="/static/imgs/soc_med/Twitter.png" width="44" height="44"></a>
-	      <a href="http://instagram.com/sachristiandental"><img src="/static/imgs/soc_med/Instagram.png" width="44" height="44"></a>
-	      <a href="http://www.pinterest.com/sacdc1/"><img src="/static/imgs/soc_med/Pinterest.png" width="44" height="44"></a>
+              <a href="https://www.linkedin.com/company/the-san-antonio-christian-dental-clinic?trk=biz-companies-cym" target="_blank"><img src="/static/imgs/soc_med/LinkedIn.png" width="44" height="44"></a>
+              <a href="https://www.facebook.com/pages/San-Antonio-Christian-Dental-Clinic/308745854960" target="_blank"><img src="/static/imgs/soc_med/Facebook.png" width="44" height="44"></a>
+              <a href="https://twitter.com/SanAntonioCDC" target="_blank"><img src="/static/imgs/soc_med/Twitter.png" width="44" height="44"></a>
+	      <a href="http://instagram.com/sachristiandental" target="_blank"><img src="/static/imgs/soc_med/Instagram.png" width="44" height="44"></a>
+	      <a href="http://www.pinterest.com/sacdc1/" target="_blank"><img src="/static/imgs/soc_med/Pinterest.png" width="44" height="44"></a>
           </div>
         </div>
       </div>
