Finished Get Involved and Schedule Visit pages.

--- a/layouts/default.html
+++ b/layouts/default.html
@@ -116,7 +116,7 @@
             <div id="twitter-feed"></div>
           </div>
 
-          <div class="col-md-2 well well-lg">
+          <div class="col-md-2 well well-lg demo">
               <a href="https://www.linkedin.com/company/the-san-antonio-christian-dental-clinic?trk=biz-companies-cym" target="_blank"><img src="/static/imgs/soc_med/LinkedIn.png" width="44" height="44"></a>
               <a href="https://www.facebook.com/pages/San-Antonio-Christian-Dental-Clinic/308745854960" target="_blank"><img src="/static/imgs/soc_med/Facebook.png" width="44" height="44"></a>
               <a href="https://twitter.com/SanAntonioCDC" target="_blank"><img src="/static/imgs/soc_med/Twitter.png" width="44" height="44"></a>
