--- a/layouts/default.html
+++ b/layouts/default.html
@@ -117,11 +117,15 @@
           </div>
 
           <div class="col-md-2 well well-lg demo">
-              <a href="https://www.linkedin.com/company/the-san-antonio-christian-dental-clinic?trk=biz-companies-cym" target="_blank"><img src="/static/imgs/soc_med/LinkedIn.png" width="44" height="44"></a>
-              <a href="https://www.facebook.com/pages/San-Antonio-Christian-Dental-Clinic/308745854960" target="_blank"><img src="/static/imgs/soc_med/Facebook.png" width="44" height="44"></a>
-              <a href="https://twitter.com/SanAntonioCDC" target="_blank"><img src="/static/imgs/soc_med/Twitter.png" width="44" height="44"></a>
-	      <a href="http://instagram.com/sachristiandental" target="_blank"><img src="/static/imgs/soc_med/Instagram.png" width="44" height="44"></a>
-	      <a href="http://www.pinterest.com/sacdc1/" target="_blank"><img src="/static/imgs/soc_med/Pinterest.png" width="44" height="44"></a>
+	    <div class="soc_med_height">
+              <a class="soc_med_width" href="https://www.linkedin.com/company/the-san-antonio-christian-dental-clinic?trk=biz-companies-cym" target="_blank"><img src="/static/imgs/soc_med/LinkedIn.png" width="44" height="44"></a>
+              <a class="soc_med_width" href="https://www.facebook.com/pages/San-Antonio-Christian-Dental-Clinic/308745854960" target="_blank"><img src="/static/imgs/soc_med/Facebook.png" width="44" height="44"></a>
+              <a class="soc_med_width" href="https://twitter.com/SanAntonioCDC" target="_blank"><img src="/static/imgs/soc_med/Twitter.png" width="44" height="44"></a>
+	    </div>
+	    <div class="soc_med_height">
+	      <a class="soc_med_width" href="http://instagram.com/sachristiandental" target="_blank"><img src="/static/imgs/soc_med/Instagram.png" width="44" height="44"></a>
+	      <a class="soc_med_width" href="http://www.pinterest.com/sacdc1/" target="_blank"><img src="/static/imgs/soc_med/Pinterest.png" width="44" height="44"></a>
+	    </div>
           
           </div>
         </div>
