Centered loading icon; Added CSS for social-media links, max-w/h + margins

--- a/content/stylesheet.css
+++ b/content/stylesheet.css
@@ -45,12 +45,10 @@ footer{
     padding-bottom: 99999px;
 }
 
-.soc_med_height{
-    padding: 10px 0px;
-}
-
-.soc_med_width{
-    padding: 0px 2px 0px 0px;
+img.social-media {
+    margin: 10px 10px 10px 10px;
+    max-width: 50px;
+    max-height: 50px;
 }
 
 .equal {
