--- a/layouts/default.html
+++ b/layouts/default.html
@@ -103,34 +103,29 @@
 
     <footer>
       <div class="container">
-        <div class="row">
-        <div class="equal">
-          <div class="col-md-2 well well-lg demo">
+        <div class="row equal">
+
+          <div class="col-md-3 well well-lg demo">
             1 Haven for Hope Way<br>
             Building 1, Suite 400<br>
             San Antonio, TX 78207<br>
 	          (210) 220-2300<br>
 	          <a href="mailto:info@sachristiandental.org">info@sachristiandental.org</a>
           </div>
-          <div class="col-md-8 well demo">
-            <div id="twitter-feed"></div>
+
+          <div class="col-md-6 well demo text-center" id="twitter-feed">
           </div>
 
-          <div class="col-md-2 well well-lg demo">
-	    <div class="soc_med_height">
-              <a class="soc_med_width" href="https://www.linkedin.com/company/the-san-antonio-christian-dental-clinic?trk=biz-companies-cym" target="_blank"><img src="/static/imgs/soc_med/LinkedIn.png" width="44" height="44"></a>
-              <a class="soc_med_width" href="https://www.facebook.com/pages/San-Antonio-Christian-Dental-Clinic/308745854960" target="_blank"><img src="/static/imgs/soc_med/Facebook.png" width="44" height="44"></a>
-              <a class="soc_med_width" href="https://twitter.com/SanAntonioCDC" target="_blank"><img src="/static/imgs/soc_med/Twitter.png" width="44" height="44"></a>
-	    </div>
-	    <div class="soc_med_height">
-	      <a class="soc_med_width" href="http://instagram.com/sachristiandental" target="_blank"><img src="/static/imgs/soc_med/Instagram.png" width="44" height="44"></a>
-	      <a class="soc_med_width" href="http://www.pinterest.com/sacdc1/" target="_blank"><img src="/static/imgs/soc_med/Pinterest.png" width="44" height="44"></a>
-	    </div>
+          <div class="col-md-3 well well-lg demo">
+            <a href="https://www.linkedin.com/company/the-san-antonio-christian-dental-clinic?trk=biz-companies-cym" target="_blank"><img class="social-media" src="/static/imgs/soc_med/LinkedIn.png"></a>
+            <a href="https://www.facebook.com/pages/San-Antonio-Christian-Dental-Clinic/308745854960" target="_blank"><img class="social-media" src="/static/imgs/soc_med/Facebook.png"></a>
+            <a href="https://twitter.com/SanAntonioCDC" target="_blank"><img class="social-media" src="/static/imgs/soc_med/Twitter.png"></a>
+	          <a href="http://instagram.com/sachristiandental" target="_blank"><img class="social-media" src="/static/imgs/soc_med/Instagram.png"></a>
+	          <a href="http://www.pinterest.com/sacdc1/" target="_blank"><img class="social-media" src="/static/imgs/soc_med/Pinterest.png"></a>
+	        </div>
           
-          </div>
-        </div>
-        </div>
-      </div>
+        </div> <!-- row -->
+      </div> <!-- container -->
     </footer>
   </body>
 </html>
