--- a/layouts/default.html
+++ b/layouts/default.html
@@ -50,8 +50,8 @@
             <span class="icon-bar"></span>
           </button>
           <a href="/" title="Home"><img class="brand" src="/static/imgs/sa-cdc_logo.gif" height="92px" width="113px"></a>
-          <p class="navbar-right navbar-text sa-cdc-utility">
-            Search <span class="glyphicon glyphicon-search"></span>
+          <!-- FOR FUTURE SEARCH FUNCTION <p class="navbar-right navbar-text sa-cdc-utility">
+            Search <span class="glyphicon glyphicon-search"></span> -->
           </p>
         </div>
         <!-- Collect the nav links, forms, and other content for toggling -->
