--- a/content/stylesheet.css
+++ b/content/stylesheet.css
@@ -51,6 +51,25 @@ footer{
     padding-bottom: 99999px;
 }
 
+/**
+ * Adding resoponsiveness to google maps iframe
+ * Credit: http://www.smashingmagazine.com/2014/02/27/making-embedded-content-work-in-responsive-design/
+ **/
+.map-container {
+    position: relative;
+    padding-bottom: 66%;
+    height: 0;
+    overflow: hidden;
+}
+
+.map-container iframe {
+    position: absolute;
+    top:0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+}
+
 img.social-media {
     margin: 10px 10px 10px 10px;
     max-width: 50px;
