Added reference for FAVICON, not ideal format but should work in most modern browsers.

--- a/layouts/default.html
+++ b/layouts/default.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>SA CDC - <%= @item[:title] %></title>
-
+    <link rel="shortcut icon" href="/static/imgs/sa-cdc_logo_sm.gif" type="image/x-icon" />
     <link href='http://fonts.googleapis.com/css?family=Cabin:400,700,400italic,700italic' rel='stylesheet' type='text/css'>
 
     <!-- Latest compiled and minified CSS -->
