--- a/layouts/default.html
+++ b/layouts/default.html
@@ -117,7 +117,7 @@
           </div>
 
           <div class="col-md-3 well well-lg demo">
-            <a href="https://www.linkedin.com/company/the-san-antonio-christian-dental-clinic?trk=biz-companies-cym" target="_blank"><img class="social-media" src="/static/imgs/soc_med/LinkedIn.png"></a>
+            <a href="https://www.linkedin.com/company/the-san-antonio-christian-dental-clinic?trk=biz-companies-cym" target="_blank"><img class="linkedIn" src="/static/imgs/soc_med/LinkedIn.png"></a>
             <a href="https://www.facebook.com/pages/San-Antonio-Christian-Dental-Clinic/308745854960" target="_blank"><img class="social-media" src="/static/imgs/soc_med/Facebook.png"></a>
             <a href="https://twitter.com/SanAntonioCDC" target="_blank"><img class="social-media" src="/static/imgs/soc_med/Twitter.png"></a>
 	          <a href="http://instagram.com/sachristiandental" target="_blank"><img class="social-media" src="/static/imgs/soc_med/Instagram.png"></a>
