--- a/static/css/docs.css
+++ b/static/css/docs.css
@@ -442,7 +442,7 @@ body {
 .bs-docs-featurette-title {
   font-size: 30px;
   font-weight: normal;
-  color: #333;
+  color: #fff;
   margin-bottom: 5px;
 }
 .half-rule {
