Changed text colors

--- a/static/css/docs.css
+++ b/static/css/docs.css
@@ -451,7 +451,7 @@ body {
 }
 .bs-docs-featurette h3 {
   font-weight: normal;
-  color: #333;
+  color: #fff;
   margin-bottom: 5px;
 }
 .bs-docs-featurette ul, ol {
