--- a/layouts/default.html
+++ b/layouts/default.html
@@ -103,8 +103,8 @@
 
     <footer>
       <div class="container">
-        <div class="row">
-          <div class="col-md-3 well">
+        <div class="row equal">
+          <div class="col-md-3 well demo">
             1 Haven for Hope Way<br>
             Building 1, Suite 400<br>
             San Antonio, TX 78207<br>
@@ -112,10 +112,10 @@
 	          <a href="mailto:info@sachristiandental.org">info@sachristiandental.org</a>
           </div>
 
-          <div class="col-md-6 well text-center" id="twitter-feed" style="min-height:100%">
+          <div class="col-md-6 well text-center demo" id="twitter-feed" style="min-height:100%">
           </div>
 
-          <div class="col-md-3 well">
+          <div class="col-md-3 well demo">
             <a href="https://www.linkedin.com/company/the-san-antonio-christian-dental-clinic?trk=biz-companies-cym" target="_blank"><img class="linkedIn" src="/static/imgs/soc_med/LinkedIn.png"></a>
             <a href="https://www.facebook.com/pages/San-Antonio-Christian-Dental-Clinic/308745854960" target="_blank"><img class="social-media" src="/static/imgs/soc_med/Facebook.png"></a>
             <a href="https://twitter.com/SanAntonioCDC" target="_blank"><img class="social-media" src="/static/imgs/soc_med/Twitter.png"></a>
