--- a/layouts/default.html
+++ b/layouts/default.html
@@ -13,15 +13,16 @@
     <!-- <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap-theme.min.css"> -->
 
     <link rel="stylesheet" href="/style.css">
-    <link rel="stylesheet" href="/static/css/docs.css">
-    <link rel="stylesheet" href="/twitter-styles.css">
+    <link rel="stylesheet" href="/static/css/twitter-styles-fade.css">
 
     <!-- Latest compiled and minified JavaScript -->
     <script src="http://code.jquery.com/jquery.js"></script>
     <script src="//netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js"></script>
 
-    <!-- Date.js to make the eligibility sheet easier. Should also prove useful when we do scheduling stuff -Browne -->
-    <script src="/static/scripts/date.js"></script>
+    <% if(@item[:title]=="Eligibility") %>
+      <!-- Date.js to make the eligibility sheet easier. Should also prove useful when we do scheduling stuff -Browne -->
+      <script src="/static/scripts/date.js"></script>
+    <% end %>
     <script src="/static/scripts/generic.js"></script>
     <script src="/static/scripts/twitterfeed-fade.js"></script>
 
@@ -103,8 +104,8 @@
 
     <footer>
       <div class="container">
-        <div class="row equal">
-          <div class="col-md-3 well demo">
+        <div class="row" style="height: 182px;">
+          <div class="col-md-3 well footer-well" style="min-height:100%; margin: 0;">
             1 Haven for Hope Way<br>
             Building 1, Suite 400<br>
             San Antonio, TX 78207<br>
@@ -112,10 +113,10 @@
 	          <a href="mailto:info@sachristiandental.org">info@sachristiandental.org</a>
           </div>
 
-          <div class="col-md-6 well text-center demo" id="twitter-feed" style="min-height:100%">
+          <div class="col-md-6 well text-center footer-well" id="twitter-feed" style="min-height:100%; margin: 0;">
           </div>
 
-          <div class="col-md-3 well demo">
+          <div class="col-md-3 well footer-well" style="min-height:100%; margin: 0;">
             <a href="https://www.linkedin.com/company/the-san-antonio-christian-dental-clinic?trk=biz-companies-cym" target="_blank"><img class="linkedIn" src="/static/imgs/soc_med/LinkedIn.png"></a>
             <a href="https://www.facebook.com/pages/San-Antonio-Christian-Dental-Clinic/308745854960" target="_blank"><img class="social-media" src="/static/imgs/soc_med/Facebook.png"></a>
             <a href="https://twitter.com/SanAntonioCDC" target="_blank"><img class="social-media" src="/static/imgs/soc_med/Twitter.png"></a>
