--- a/layouts/default.html
+++ b/layouts/default.html
@@ -104,8 +104,8 @@
 
     <footer>
       <div class="container">
-        <div class="row" style="height: 182px;">
-          <div class="col-md-3 well footer-well" style="min-height:100%; margin: 0;">
+        <div class="row well">
+          <div class="col-md-2 text-center">
             1 Haven for Hope Way<br>
             Building 1, Suite 400<br>
             San Antonio, TX 78207<br>
@@ -113,16 +113,26 @@
 	          <a href="mailto:info@sachristiandental.org">info@sachristiandental.org</a>
           </div>
 
-          <div class="col-md-6 well text-center footer-well" id="twitter-feed" style="min-height:100%; margin: 0;">
-          </div>
+          <div class="col-md-7 text-center">
+	    <div class="row" id="twitter-feed">
+            </div>
 
-          <div class="col-md-3 well footer-well" style="min-height:100%; margin: 0;">
+            <div class="row">
+
             <a href="https://www.linkedin.com/company/the-san-antonio-christian-dental-clinic?trk=biz-companies-cym" target="_blank"><img class="linkedIn" src="/static/imgs/soc_med/LinkedIn.png"></a>
             <a href="https://www.facebook.com/pages/San-Antonio-Christian-Dental-Clinic/308745854960" target="_blank"><img class="social-media" src="/static/imgs/soc_med/Facebook.png"></a>
             <a href="https://twitter.com/SanAntonioCDC" target="_blank"><img class="social-media" src="/static/imgs/soc_med/Twitter.png"></a>
 	          <a href="http://instagram.com/sachristiandental" target="_blank"><img class="social-media" src="/static/imgs/soc_med/Instagram.png"></a>
 	          <a href="http://www.pinterest.com/sacdc1/" target="_blank"><img class="social-media" src="/static/imgs/soc_med/Pinterest.png"></a>
-	        </div>
+            </div>
+          </div>
+          <div class="col-md-3">
+                        <a href="https://www.linkedin.com/company/the-san-antonio-christian-dental-clinic?trk=biz-companies-cym" target="_blank"><img class="linkedIn" src="/static/imgs/soc_med/LinkedIn.png"></a>
+            <a href="https://www.facebook.com/pages/San-Antonio-Christian-Dental-Clinic/308745854960" target="_blank"><img class="social-media" src="/static/imgs/soc_med/Facebook.png"></a>
+            <a href="https://twitter.com/SanAntonioCDC" target="_blank"><img class="social-media" src="/static/imgs/soc_med/Twitter.png"></a>
+	          <a href="http://instagram.com/sachristiandental" target="_blank"><img class="social-media" src="/static/imgs/soc_med/Instagram.png"></a>
+	          <a href="http://www.pinterest.com/sacdc1/" target="_blank"><img class="social-media" src="/static/imgs/soc_med/Pinterest.png"></a>
+          </div>
         </div> <!-- row -->
       </div>
     </footer>
