--- a/content/stylesheet.css
+++ b/content/stylesheet.css
@@ -36,11 +36,9 @@ body {
 }
 
 .brand {
-  margin: 3px 0px 0px 0px;
+  margin: 15px 0px 0px 0px;
   position: absolute;
   z-index: 100;
-  max-height: 72px;
-  max-width: 76px;
 }
 
 .carousel-inner > .item > img {
@@ -52,7 +50,7 @@ footer{
 	border-top: 1px dashed #CCCCCC;
 	margin: 40px 0px;
 	padding: 20px 0px;
-    color: black;
+  color: black;
 }
 
 /*  Attempting to fix carousel gradient */
@@ -60,44 +58,14 @@ footer{
     background-image: none
 }
 
-.carousel-caption a:link { color: #FFFFFF; }
-
-.carousel-caption a:active { color: #5AC1FF; }
-
-.carousel-caption a:visited { color: #C0C0C0; }
-
-.captionright {
-   right: 10px;
-   left: auto;
-   max-width: 150px;
-   border-radius: 5px;
-   padding-bottom: 0px;
-   bottom: 5px;
-}
-
-.captionleft {
-  /*background: rgba(155, 155, 155, 0.9);*/
-  left: 0;
-  max-width: 150px;
+/* Attempting to make carousel text pop out */
+.carousel-caption {
+  background: rgba(155, 155, 155, 0.9);
   border-radius: 5px;
-  padding-bottom: 0px;
-  bottom: 5px;
-}
-
-.captionattributionright {
-  bottom: 0;
-  right: 5px;
-  left: auto;
-  padding-bottom: 5px;
-  font-size: .5em;
-}
-
-.captionattributionleft {
-  bottom: 0;
-  right: auto;
-  left: 5px;
-  padding-bottom: 5px;
-  font-size: .5em;
+  padding-top: 0px;
+  padding-left: 3px;
+  padding-right: 3px;
+  padding-bottom: 18px;
 }
 
 h3.carousel {
@@ -197,15 +165,15 @@ a:visited { color: #0079C1; }
  *  Featurettes...
  */
 .bs-docs-featurette {
-  padding-top:    0px;
-  padding-bottom: 0px;
+  padding-top:    40px;
+  padding-bottom: 40px;
   font-size: 16px;
   line-height: 1.5;
   /*color: #555;*/
   text-align: center;
   vertical-align top;
   /*background-color: #fff;*/
-  /*border-bottom: 1px solid #e5e5e5;*/
+  border-bottom: 1px solid #e5e5e5;
 }
 .bs-docs-featurette + .bs-docs-footer {
   margin-top: 0;
@@ -247,36 +215,14 @@ a:visited { color: #0079C1; }
 }
 
 @media (min-width: 480px) {
-  /*.bs-docs-featurette .img-responsive {
+  .bs-docs-featurette .img-responsive {
     margin-top: 30px;
-  }*/
-  .bs-docs-featurette {
-    padding-top: 0px;
-    padding-bottom: 0px;
-  }
-  .captionleft {
-    max-width: 220px;
-    top: auto;
-    bottom: 70px;
-    right: auto;
-    left: 25px;
-  }
-  .captionright {
-    max-width: 220px;
-    top: auto;
-    bottom: 70px;
-    right: 25px;
-    left: auto;
-  }
-  .brand {
-    max-height: none;
-    max-width: none;
   }
 }
 @media (min-width: 768px) {
   .bs-docs-featurette {
-    padding-top:    0px;
-    padding-bottom: 0px;
+    padding-top:    100px;
+    padding-bottom: 100px;
   }
   .bs-docs-featurette-title {
     font-size: 40px;
@@ -297,54 +243,5 @@ a:visited { color: #0079C1; }
 
   .bs-docs-featurette .img-responsive {
     margin-top: 0;
-  }
-
-  .captionleft {
-    max-width: 250px;
-    top: auto;
-    bottom: 125px;
-    right: 400px;
-    left: auto;
-  }
-  .captionright {
-    max-width: 250px;
-    top: auto;
-    bottom: 125px;
-    right: auto;
-    left: 400px;
-  }
-}
-
-@media (min-width: 992px) {
-  .captionleft {
-    max-width: 450px;
-    top: auto;
-    bottom: 200px;
-    right: 550px;
-    left: auto;
-  }
-  .captionright {
-    max-width: 450px;
-    top: auto;
-    bottom: 200px;
-    right: auto;
-    left: 550px;
-  }
-}
-
-@media (min-width: 1200px) {
-  .captionleft {
-    max-width: 450px;
-    top: auto;
-    bottom: 300px;
-    right: 650px;
-    left: auto;
-  }
-  .captionright {
-    max-width: 450px;
-    top: auto;
-    bottom: 300px;
-    right: auto;
-    left: 650px;
   }
 }
