Changed complete layout to black background

--- a/layouts/default.html
+++ b/layouts/default.html
@@ -108,13 +108,15 @@
         </div><!-- /.navbar-collapse -->
       </div><!-- /.container-fluid -->
     </nav>
-      
+    
+    <div class="containerbody">
     <div id="main" class="container">
       <%= yield %>
     </div>
+    </div>
 
     <footer>
-      <div class="container">
+      <div class="containerbody">
         <div class="row well">
           <div class="col-md-2 text-center">
             1 Haven for Hope Way<br>
