--- a/content/stylesheet.css
+++ b/content/stylesheet.css
@@ -4,9 +4,11 @@
 }
 
 body {
-  background: url(/static/imgs/IMG_2240_gray.jpg) no-repeat center center fixed;
+  <!--background: url(/static/imgs/IMG_2240_gray.jpg) no-repeat center center fixed;-->
+  background: rgba(155, 155, 155, 1.0);
   background-size: cover;
-  color: white;
+  color: #FFF;
+  margin-bottom: -40px;
 }
 
 .footer-well {
@@ -20,9 +22,27 @@ body {
 }
 
 #main {
-  background: rgba(155, 155, 155, 0.9);
+  background: rgba(155, 155, 155, 0);
   border-radius: 5px;
 }
+
+/*Making black, responsive background*/
+.containerbody {
+  background: rgba(0, 0, 0, 1.0);
+  margin-top:-20px;
+  margin-bottom:-40px;
+  margin-right:auto;
+  margin-left:auto;
+  padding-left:15px;
+  padding-right:15px;
+  padding-top:20px;
+}
+  
+  @media (min-width:768px){.containerbody{width:992px}}
+  
+  @media (min-width:992px){.containerbody{width:1200px}}
+  
+  @media (min-width:1200px){.containerbody{width:1280px}}
 
 #sa-cdc-navbar-collapse {
   padding-left: 180px;
@@ -48,10 +68,26 @@ body {
   border-radius: 5px;
 }
 
+img.frontpagepic {
+  border-radius: 30%;
+  margin-top: 15px;
+  margin-bottom: 15px;
+  display:table-cell; 
+  vertical-align:middle;
+}
+
+img.frontpageicon {
+  margin-right: auto;
+  margin-left: auto;
+  margin-top: 15px;
+  margin-bottom: 15px;
+  display:table-cell; 
+  vertical-align:middle;
+  max-height: 240px;
+}
+
 footer{
-	border-top: 1px dashed #CCCCCC;
 	margin: 40px 0px;
-	padding: 20px 0px;
     color: black;
 }
 
