--- a/layouts/default.html
+++ b/layouts/default.html
@@ -129,7 +129,7 @@
 	    <div class="row" id="twitter-feed">
             </div>
           </div>
-          <div class="col-md-4 text-center">
+          <div class="col-md-4 social-media">
                         <a href="https://www.linkedin.com/company/the-san-antonio-christian-dental-clinic?trk=biz-companies-cym" target="_blank"><img class="linkedIn" src="/static/imgs/soc_med/LinkedIn.png"></a>
             <a href="https://www.facebook.com/pages/San-Antonio-Christian-Dental-Clinic/308745854960" target="_blank"><img class="social-media" src="/static/imgs/soc_med/Facebook.png"></a>
             <a href="https://twitter.com/SanAntonioCDC" target="_blank"><img class="social-media" src="/static/imgs/soc_med/Twitter.png"></a>
