--- a/content/stylesheet.css
+++ b/content/stylesheet.css
@@ -5,9 +5,9 @@
 
 body {
   /*background: url(/static/imgs/IMG_2240_gray.jpg) no-repeat center center fixed;*/
-  background: rgba(0, 0, 0, 1.0);
+  background: rgba(255, 255, 255, 1.0);
   background-size: cover;
-  color: #FFF;
+  color: #000;
   margin-bottom: -40px;
 }
 
@@ -27,18 +27,31 @@ body {
 }
 
 #main {
-  background: rgba(0, 0, 0, 1.0);
+  background: rgba(255, 255, 255, 1.0);
   border-radius: 5px;
 }
 
 /*Making black, responsive background*/
-.container {
+/*.container {
   background: rgba(0, 0, 0, 1.0);
   margin-top:-20px;
   margin-bottom:-40px;
   padding-left:15px;
   padding-right:15px;
   padding-top:20px;
+}*/
+
+.navbar {
+  background-color: rgba(0, 116, 178, 1.0);
+ }
+
+.navbar-default .navbar-nav>.active>a, .navbar-default .navbar-nav>.active>a:hover,
+.navbar-default .navbar-nav>.active>a:focus {
+    color: #000;
+}
+
+.navbar-default .navbar-nav>li>a {
+    color: #fff
 }
 
 #sa-cdc-navbar-collapse {
@@ -63,14 +76,6 @@ body {
 .carousel-inner > .item > img {
   margin: 0 auto;
   border-radius: 5px;
-}
-
-img.frontpagepic {
-  border-radius: 30%;
-  margin-top: 15px;
-  margin-bottom: 15px;
-  display:table-cell; 
-  vertical-align:middle;
 }
 
 img.frontpageicon {
