Tweaked top-left logo

--- a/layouts/default.html
+++ b/layouts/default.html
@@ -61,7 +61,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a href="/" title="Home"><img class="brand" src="/static/imgs/sa-cdc_logo2_sm.gif" height=“74px" width="104px"></a>
+          <a href="/" title="Home"><img class="brand" src="/static/imgs/sa-cdc_logo2_sm.gif"></a>
           <!-- FOR FUTURE SEARCH FUNCTION <p class="navbar-right navbar-text sa-cdc-utility">
             Search <span class="glyphicon glyphicon-search"></span> -->
           </p>
